# qaib

./: .gitignore  CMakeLists.txt  PKGBUILD  render_graph  render_graph.sh  render_graph_png  render_pop
cmake/Modules/: FindBoost.cmake  FindBox2D.cmake  FindSFML.cmake
data/: 15.pop  2293.pop  default_ai.pop
data/static/veh_pickup/: config.yaml
pop/: 1.pop  10.pop  11.pop  2.pop  3.pop  4.pop  5.pop  6.pop  7.pop  8.pop  9.pop
pop1/: 1.pop  2.pop  3.pop  4.pop  5.pop  6.pop  7.pop
source/qaib/: main.cpp
source/qaib/app/: Application.cpp  Application.hpp  MultithreadedTrainer.cpp  MultithreadedTrainer.hpp  ObjectClassManager.cpp  ObjectClassManager.hpp  PlayingGameApplication.cpp  PlayingGameApplication.hpp  TrainingApplication.cpp  TrainingApplication.hpp
source/qaib/game/: Bullet.cpp  Bullet.hpp  Damagable.hpp  GameObject.cpp  GameObject.hpp  GameWorld.cpp  GameWorld.hpp  KeptInGameWorld.cpp  KeptInGameWorld.hpp  Movable.cpp  Movable.hpp  NeuralNetworkPawnController.cpp  NeuralNetworkPawnController.hpp  Obstruction.cpp  Obstruction.hpp  ObstructionGenerator.cpp  ObstructionGenerator.hpp  Pawn.cpp  Pawn.hpp  PawnController.cpp  PawnController.hpp  Player.cpp  Player.hpp  PlayerPawnController.cpp  PlayerPawnController.hpp  StaticObject.cpp  StaticObject.hpp  StaticVehicle.cpp  StaticVehicle.hpp
source/qaib/gfx/: AIVisionGameRenderer.cpp  AIVisionGameRenderer.hpp  GameRenderer.cpp  GameRenderer.hpp  resources.hpp
source/qaib/graphics/: SceneRenderer.cpp  SceneRenderer.hpp
source/qaib/neuro/: ActivationFunction.cpp  ActivationFunction.hpp  Neuron.cpp  Neuron.hpp  NeuronNetwork.cpp  NeuronNetwork.hpp  Perceptron.cpp  Perceptron.hpp
source/qaib/nn/: Genome.cpp  Genome.hpp  Innovation.hpp  JITNeuralNetwork.cpp  JITNeuralNetwork.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  NeuralNetworkFactory.cpp  NeuralNetworkFactory.hpp  Population.cpp  Population.hpp
source/qaib/scene/: Camera.hpp  Scene.hpp  SceneNode.cpp  SceneNode.hpp  Sprite.cpp  Sprite.hpp
source/qaib/util/: Disposable.cpp  Disposable.hpp  Event.hpp  Exception.cpp  Exception.hpp  JIT.hpp  MakeString.hpp  Random.cpp  Random.hpp  Rect.hpp  Typedef.hpp  VectorConversion.hpp
